--- a/traffic/app.json
+++ b/traffic/app.json
@@ -1,13 +1,33 @@
 {
   "pages":[
     "pages/traffic/list",
-    "pages/switchcity/switchcity"
+    "pages/switchcity/list",
+    "pages/aboutUs/list"
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
+    "navigationBarBackgroundColor": "#4fc3f7",
     "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black",
-    "backgroundColor": "#dddddd"
+    "navigationBarTextStyle":"white",
+    "backgroundColor": "#4fc3f7"
+  },
+  "tabBar": {
+    "color": "#b2b2b2",
+    "selectedColor": "#03a9f4",
+    "borderStyle": "white",
+    "list": [
+      {
+        "selectedIconPath": "images/indexSel.png",
+        "iconPath": "images/index.png",
+        "pagePath": "pages/traffic/list",
+        "text": "首页"
+      },
+      {
+        "selectedIconPath": "images/aboutSel.png",
+        "iconPath": "images/about.png",
+        "pagePath": "pages/aboutUs/list",
+        "text": "关于"
+      }
+    ]
   }
 }
